--- a/them/package.json
+++ b/them/package.json
@@ -20,6 +20,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "express": "^4.17.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.5",
     "vue-template-compiler": "^2.6.11"
   }
 }
